--- a/NVL-PHP-FORM-1/form.html
+++ b/NVL-PHP-FORM-1/form.html
@@ -5,13 +5,14 @@
     <title>Formulario</title>
   </head>
   <body>
-    <form action="form.php" method="GET">
+   <form action="./formularioPHP.php" method="POST">
       <label for="username">Usuario</label>
-      <input name="username" type="text">
+      <input name="username" type="text"><br/>
       <label for="password1">Contraseña</label>
-      <input name="password1" type="password">
+      <input name="password1" type="password"><br/>
       <label for="password2">Confirmar contraseña</label>
-      <input name="password2" type="password">
+      <input name="password2" type="password"><br/>
+      <input type="submit" value="Crear usuario">
     </form>
   </body>
 </html>
