--- a/NVL-PHP-FORM-1/form.html
+++ b/NVL-PHP-FORM-1/form.html
@@ -5,7 +5,7 @@
     <title>Formulario</title>
   </head>
   <body>
-   <form action="./formularioPHP.php" method="POST">
+   <form action="./form.php" method="POST">
       <label for="username">Usuario</label>
       <input name="username" type="text"><br/>
       <label for="password1">Contraseña</label>
